--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -4,8 +4,10 @@
     <p><span style=
       "font-family: 'Chewy', cursive;
       color:yellow; font-size:46px">I'm here!</span>&nbsp;は誰でも&nbsp;
-      誰とでも繋がれる&nbsp;コミュニティツールです!</p>
-      <p>配信者と視聴者の関係だけでなく、<br>
+      誰とでも繋がれる&nbsp;マッチングツールです!</p>
+      <p>オフラインでのイベントや zoomなどのオンライン開催の<br>
+      主催者と参加者を繋ぐ手助けをします。</p>
+      <p>ホストとゲストの関係だけでなく、<br>
       誰でも気軽に新しいコミュニティに触れられること。<br>
       をコンセプトとしています。</p>
       <p>あなたの世界がより色鮮やかに広がりを見せること<br>
