--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
   <p><span style=
     "font-family: 'Chewy', cursive;
       color:white">I'm here!</span></p>
-  <p style="    font-family: 'M PLUS Rounded 1c', sans-serif; color:white">誰とでも繋がれるコミュニティツール</p>
+  <p style="    font-family: 'M PLUS Rounded 1c', sans-serif; color:white">誰とでも繋がれるマッチングツール</p>
   <p class="copy-write">&copy; 2022 I'm here</p>
 
 </footer>
