--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,11 +6,13 @@
 <div class="edit-page-section">
   <div class="profile">
     <div class="profile-img">
-      <% if @user.image_name == "default_user.jpg"%>
-        <img src="/assets/catman">
-      <% else %>
-        <img src="<%= "/user_images/#{@user.image_name}"%>" >
-      <% end %>
+      <div class="img-objet">
+        <% if @user.image_name.size == 0 %>
+          <%= image_tag "/assets/catman" %>
+        <% else %>
+          <%= image_tag @user.image_name.url %>
+        <% end %>
+      </div>
     <%= form_for(@user, url:{controller: 'users',action: 'update', id: @user.id}) do |f| %>
       <div class="img-btn">画像変更
       <%= f.file_field :image_name %>
@@ -25,9 +27,9 @@
       </p>
       <% end %>
       <% if @user.comment.nil? %>
-      <%= f.text_area(:comment, class: "profile-comment-text", placeholder: "プロフィールコメント", size:"40x15") %>
+      <%= f.text_area(:comment, class: "profile-comment-text", placeholder: "プロフィールコメント", size:"45x10") %>
       <% else %>
-      <%= f.text_area(:comment, class: "profile-comment-text", placeholder: :comment, size:"40x15") %>
+      <%= f.text_area(:comment, class: "profile-comment-text", placeholder: :comment, size:"45x10") %>
       <% end %>
     </div>
     <%= f.submit(class: "edit-btn") %>
